Rename card overlay classes; fix image stretching due to flexbox

--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -158,11 +158,7 @@
 }
 
 // Card image
-.card-img {
-  // margin: -1.325rem;
-  @include border-radius($card-border-radius-inner);
-}
-.card-img-overlay {
+.card-overlay {
   position: absolute;
   top: 0;
   right: 0;
@@ -171,13 +167,19 @@
   padding: $card-img-overlay-padding;
 }
 
-
+.card-overlay-img {
+  width: 100%; // Required because we use flexbox and this inherently applies align-self: stretch
+  @include border-radius($card-border-radius-inner);
+}
 
 // Card image caps
 .card-img-top {
+  width: 100%; // Required because we use flexbox and this inherently applies align-self: stretch
   @include border-top-radius($card-border-radius-inner);
 }
+
 .card-img-bottom {
+  width: 100%; // Required because we use flexbox and this inherently applies align-self: stretch
   @include border-bottom-radius($card-border-radius-inner);
 }
 
